Bug 1825307 - Do not render consecutive black frames when a video track is disabled. r=padenot

Without this patch, if the video source changes resolution, this would be
reflected in a HTMLVideoElement rendering the track, even though the track is
disabled. Such resizes would be observable both through resize events on the
video element, through the videoWidth and videoHeight attributes, and by
drawing the video element to a CanvasRenderingContext2D.

Differential Revision: https://phabricator.services.mozilla.com/D174088